--- a/src/main/webapp/inicial_arquivos/css/tab_css.css
+++ b/src/main/webapp/inicial_arquivos/css/tab_css.css
@@ -4,6 +4,7 @@
 		min-height: 270px;
 		clear: both;
 		margin: 25px 0;
+		font-size: 1.2em;
 	}
 	.tab {
 		float: left;
@@ -31,14 +32,14 @@
 		position: absolute;
 		top: 28px;
 		left: 0;
-		background: #ffffff;
+		background: #dbe9ba;
 		right: 0;
 		bottom: 0;
 		padding: 20px;
 		border: 1px solid #ccc;
 	}
 	[type=radio]:checked ~ label {
-		background: #ffffff;
+		background:#dbe9ba;
 		border-bottom: 1px solid #ffffff;
 		z-index: 2;
 	}
@@ -60,9 +61,10 @@
 		clear: both;
 		margin: 25px 0;
 		min-width: 80%;
+		font-size: 1.2em;
 	}
 	.tab .contenteudo {
-		background-color: #fff;
+		background-color: #dbe9ba;
 		border: 1px solid #000;
 		padding-right: 10px;
 		margin-bottom: 15px;
