--- a/src/main/webapp/inicial_arquivos/css/avaliar.css
+++ b/src/main/webapp/inicial_arquivos/css/avaliar.css
@@ -1,9 +1,9 @@
-
+@media only screen and (min-width : 768px) {
 .content
 {
-
 	font-weight: normal !important;
 }
+
 .sublinharLink
 {
 	text-decoration:underline;
@@ -13,13 +13,24 @@
 {
 	font-size: 1.4em;
     font-weight: normal;	
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .tile strong
 {
 	font-size: 1.2em;
     font-weight: bold;	
+}
+fieldset
+	{
+	font-size: 14px;
+	 font-family: Arial, Helvetica, sans-serif !important;
+	}
+.width-5
+{
+	width: 26%;
+	float: left;
+	margin-left: 10%;
 }
 
 #content fieldset {
@@ -49,13 +60,26 @@ div .outstanding-header h2
 	margin:0;	
 	border: none;	
 }
-.outstanding-header .outstanding-title
-{
-	margin:0;
-	padding-top:10px;
-	font-size: 1.7em;
-    font-weight: normal;
-	padding-bottom: 10px;
+ .outstanding-title {
+    color: #2C67CD;
+    font-size: 18px; 
+    font-weight: normal ;
+     font-family: Arial, Helvetica, sans-serif;
+    padding: 7px 0;
+    margin-left: 0;    
+    padding-left: 0.3em;
+    border-bottom: 1px solid #CCCCCC;
+}
+
+ .contraste .outstanding-title {
+    color: #fff;
+    font-size: 18px; 
+    font-weight: normal ;
+     font-family: Arial, Helvetica, sans-serif;
+    padding: 7px 0;
+    margin-left: 0;    
+    padding-left: 0.3em;
+    border-bottom: 1px solid #CCCCCC;
 }
 div  #notaResumo .outstanding-title
 {
@@ -64,7 +88,7 @@ div  #notaResumo .outstanding-title
 	border-bottom: 1px solid #c0c0c0;		
 }
 
-hr
+.hr_linhaDupla
 {
 	border-bottom: 4px solid #000;
 	border-top: 4px solid #c0c0c0;
@@ -107,11 +131,302 @@ table caption{
     line-height: 1em;
 }
 
+div.scoreB_verde {
+    background-color: #0d0 !important;
+    border: 4px solid #090;
+    color: #fff !important;
+    text-shadow: 0.1em 0.1em 0.1em #000;
+  
+}
+div.scoreB_amarela {
+    background-color: #FFCC00!important;
+    border: 4px solid #e6e600;
+    color: #000 !important;  
+}
+div.scoreB_vermelha {
+    background-color: #e60000!important;
+    border: 4px solid #ff0000;
+    color: #fff !important;
+    text-shadow: 0.1em 0.1em 0.1em #000;
+  
+}
+div.block {
+    background: #ffa none repeat scroll 0 0;
+    border: 1px solid #999;
+    color: #000;
+    margin-left: 10%; 
+    width: 28%;
+}
+
+#tabelaErros {
+	position: relative;
+	margin-bottom: 30px;     
+    margin-left: 5px;
+    width: 40%;    
+}
+
+.contraste #tabelaErros {
+	position: relative;
+	margin-bottom: 30px;     
+    margin-left: 5px;
+    width: 40%;
+    border: 1px solid #fff;    
+}
+#tabelaErros .topo {
+	font-size: 1.4em;
+    background-color: #d2e4fc;
+    color: #003399;    
+    text-align: left;
+    font-size: 1.3em;
+}
+
+.contraste #tabelaErros .topo {
+	font-size: 1.4em;
+    background-color: #000;
+    color: #fff;    
+    text-align: left;
+    font-size: 1.3em;
+}
+#tabelaErros .celula {
+    background-color: #f2f4f7;  
+    color: #003399;
+    text-align: left;
+    font-weight: normal;   
+}
+
+.contraste #tabelaErros .celula {
+    background-color: #000;  
+    color: #fff;
+    text-align: left;
+    font-weight: normal;   
+}
+
+.contenteudoAvaliacao
+{
+	font-size: 1.2em;
+	font-family: Arial, Helvetica, sans-serif;	
+	clear: both;
+}
+
+.contenteudoAvaliacao table
+{
+	width: 100%;
+	background-color: #fff;
+	font-size: 1.2em;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.contraste .contenteudoAvaliacao table
+{
+	width: 100%;
+	background-color: #000;
+	font-size: 1.2em;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.containerAvaliacao .topo2
+{
+	font-size: 14px;
+    background-color: #F7F7F7;       
+    color: #003399;
+    padding: 5px;
+    text-align: left;
+}
+
+.contraste .containerAvaliacao .topo2
+{
+	font-size: 14px;
+    background-color: #000;       
+    color: #fff;
+    padding: 5px;
+    text-align: left;
+}
+
+caption
+{
+	text-align: left;
+}
+
+.containerAvaliacao table
+{	
+   border: 1px solid #fff;  
+}
+
+.containerAvaliacao .celula
+{	
+    background-color: #fff;
+    padding: .4em;  
+    color: #003399;   
+}
+
+.contraste .containerAvaliacao .celula
+{	
+    background-color: #000;
+    padding: .4em;  
+    color: #fff !important;   
+}
+
+ .outstanding-header{ 
+ border-bottom: 1px solid #CCCCCC;
+ }
+
+.indiceAvaliar0
+{
+	width: 15%;
+}
+
+.indiceAvaliar1
+{
+	width: 50%;
+}
+
+
+----Contraste----------
+
+
+
+.contraste img
+	{
+border: none;
+	}
+}
+/*-----Fim (min-width : 768px)------ */
+
+
+@media only screen and (max-width : 768px) {
+	
+.content
+{
+	font-weight: normal !important;
+}
+.sublinharLink
+{
+	text-decoration:underline;
+}
+
+.tile
+{
+	font-size: 1.4em;
+    font-weight: normal;	
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.tile strong
+{
+	font-size: 1.2em;
+    font-weight: bold;	
+}
+
+.width-5
+{
+	width: 26%;
+	margin-left: 10px;
+
+}
+
+#content fieldset {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    border-color: #329fd7;
+    border-image: none;
+    border-style: solid none none;
+    border-width: 0.1em;
+}
+fieldset, .editionComment {
+    line-height: 1.5em;
+    margin: 1em 0;
+    padding: 0 1em 1em;
+    width: auto;
+}
+
+div .outstanding-header#notaResumo
+{
+	margin:0;	
+	border-top: 4px solid #c0c0c0;	
+}
+div .outstanding-header h2
+{
+	margin:0;	
+	border: none;	
+}
+.outstanding-title {
+	color: #2C67CD;
+	font-size: 1.7em;
+	font-weight: normal;
+	padding: 7px 0;
+	margin-left: 0;
+	padding-left: 0.3em;
+	border-bottom: 1px solid #CCCCCC;
+}
+
+.contraste .outstanding-title {
+	color: #fff !important;
+	font-size: 1.7em;
+	font-weight: normal;
+	padding: 7px 0;
+	margin-left: 0;
+	padding-left: 0.3em;
+	border-bottom: 1px solid #CCCCCC;
+}
+
+div  #notaResumo .outstanding-title
+{
+	
+	border-top: 4px solid #000;
+	border-bottom: 1px solid #c0c0c0;		
+}
+
+.hr_linhaDupla
+{
+	border-bottom: 4px solid #000;
+	border-top: 4px solid #c0c0c0;
+}
+
+table caption{
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#webaxscore {
+    background: transparent url("img/bg.png") repeat scroll left top;
+    color: #000;
+    float: left;
+    margin: 0 10% 1em 12%;
+    padding:  2em;
+    text-align: center;
+    width: 7em;
+    height: 4em;
+}
+
+#webaxscore h3 {
+    font-size: 2em;
+    font-weight: normal;
+    line-height: 1em;
+    margin: 0;
+    padding: 0;
+}
+
+#webaxscore em, #webaxscore strong {
+    font-size: 0.7em;
+    margin: 0;
+    padding: 0;
+}
+
+#webaxscore span {
+    display: block;
+    font-size: 2em;
+    font-weight: bold;
+    line-height: 1em;
+
+}
+
 div.scoreB {
     background-color: #0d0 !important;
     border: 4px solid #090;
     color: #fff !important;
     text-shadow: 0.1em 0.1em 0.1em #000;
+  
 }
 div.block {
     background: #ffa none repeat scroll 0 0;
@@ -134,6 +449,17 @@ div.block {
     text-align: left;
     font-size: 1.3em;
 }
+
+.contraste #tabelaErros .topo
+{
+    background-color: #000 !important;
+    border-collapse: collapse;
+    margin: 0;
+   
+    color: #fff;
+    padding: .4em;    
+}
+
 #tabelaErros .celula {
     background-color: #f2f4f7;  
     color: #003399;
@@ -141,11 +467,25 @@ div.block {
     font-weight: normal;   
 }
 
+.containerAvaliacao table
+{	
+   border: 1px solid #fff;  
+}
+
 .containerAvaliacao .topo2
 {
 	font-size: 14px;
     background-color: #F7F7F7;       
     color: #003399;
+    padding: 5px;
+    text-align: left;
+}
+
+.contraste .containerAvaliacao .topo2
+{
+	font-size: 14px;
+    background-color: #000;       
+    color: #fff;
     padding: 5px;
     text-align: left;
 }
@@ -160,11 +500,17 @@ caption
     padding: .4em;  
     color: #003399;   
 }
-
+.contraste .containerAvaliacao .celula
+{	
+    background-color: #000;
+    padding: .4em;  
+    color: #fff;   
+}
 .contenteudoAvaliacao
 {
 	font-size: 1.2em;
 	font-family: Arial, Helvetica, sans-serif;
+	clear: both;
 }
 .contenteudoAvaliacao table
 {
@@ -174,55 +520,21 @@ caption
 	font-family: Arial, Helvetica, sans-serif;
 }
 
- .outstanding-title {
-    color: #2C67CD;
-    font-size: 1.7em; 
-    font-weight: normal ;
-    padding: 7px 0;
-    margin-left: 0;    
-    padding-left: 0.3em;
-    border-bottom: 1px solid #CCCCCC;
-}
- .outstanding-header{ 
- border-bottom: 1px solid #CCCCCC;
- }
---------Contraste----------
-
-
-.contraste .containerAvaliacao table .topo2
+.contraste .contenteudoAvaliacao table
 {
-    background-color: #F7F7F7;
-    border-collapse: collapse;
-    margin: 0;
-   
-    color: #003399;
-    padding: .4em;    
+	width: 100%;
+	background-color: #000;
+	font-size: 1.2em;
+	font-family: Arial, Helvetica, sans-serif;
+	border: 1px solid #fff;
 }
+----Contraste----------
 
-.contraste .containerAvaliacao table .celula
-{
-	background: #fff;
-	border:1px solid #fff;
-	color: #000;
-}
 
 .contraste img
 	{
 border: none;
 	}
-/*
-
-
-
-
-
-
-
-
-
-
-
-
-
-
--*/
+}
+	
+	}
