git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10673 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/inicial_arquivos/css/tab_css.css
+++ b/src/main/webapp/inicial_arquivos/css/tab_css.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width : 768px) {
-	.container {
+	.containerTab {
 		position: relative;
 		min-height: 270px;
 		clear: both;
