foram atualizadas as mensagens de alerta!
git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10677 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/inicial_arquivos/css/contato.css
+++ b/src/main/webapp/inicial_arquivos/css/contato.css
@@ -4,6 +4,11 @@
 	font-color: #000; 
 }
 
+.fonteWarning{
+	font-size: 1.4em;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .formContato label{
 	display: block;
 	float: left;
