--- a/src/main/webapp/inicial_arquivos/css/avaliar.css
+++ b/src/main/webapp/inicial_arquivos/css/avaliar.css
@@ -1,4 +1,10 @@
 @media only screen and (min-width : 768px) {
+.hr_linhaDupla{
+	border-botton: 4px solid #000;
+	border-top: 1px solid #c0c0c0; 
+	
+}
+
 .content
 {
 	font-weight: normal !important;
@@ -62,9 +68,9 @@ div .outstanding-header h2
 }
  .outstanding-title {
     color: #2C67CD;
-    font-size: 18px; 
+    font-size: 1.7em; 
     font-weight: normal ;
-     font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 7px 0;
     margin-left: 0;    
     padding-left: 0.3em;
