--- a/src/main/webapp/inicial_arquivos/css/default.css
+++ b/src/main/webapp/inicial_arquivos/css/default.css
@@ -75,6 +75,13 @@
 		color: #dcffe3;
 		padding: 0 4px;
 	}
+	
+	#portal-siteactions span {
+		background: #9ed5ab;
+		color: #dcffe3;
+		padding: 0 4px;
+	}
+	
 	#accessibility a:hover {
 		border-bottom: 1px solid;
 	}
@@ -83,8 +90,8 @@
 		padding: 0;
 		padding-top: 5px;
 		padding-bottom: 5px;
-		margin-left: 60%;
-		width: 318px;
+		margin-left: 57%;
+		width: 368px;
 		position: absolute;
 		border-bottom: 1px dotted #9ed5ab;
 		color: #9ed5ab;
@@ -117,33 +124,37 @@
 		margin: 1px 0px;
 	}
 	#logo #portal-title-1 {
-		font-size: 0.7em;
+		font-size: 0.8em;
 	}
 	#logo #portal-title {
 		font-size: 3em;
 	}
-	#sobre {
+	#menu {
 		background: #0a5517;
-		padding: 5px 0;
+		padding-top: 10px;
+		padding-bottom: 10px;		
 		padding-left: 0;
 		text-align: right;
 		font-family: Arial, Helvetica, sans-serif;
 		margin-bottom: 0;
 		clear: both;
 	}
-	#sobre ul {
+	#menu ul {
 		margin: 0;
 		margin-left: 55%;
-		width: 370px;
+		width: 400px;		
 	}
-	#sobre a {
-		color: #fff;
+	
+	#menu li
+	{
+	display: inline;
 	}
-	#sobre .portalservicos-item a {
-		margin-top: 50%;
+	#menu a {
+		
 		padding: 0 10px;
 		border-right: 1px solid #fff;
 		font-size: 1.3em;
+		color: #fff;
 	}
 	#voltar-topo {
 		text-align: right;
@@ -172,6 +183,7 @@
 		padding: 1em 0px;
 		max-width: 100%;
 	}
+		
 	a.oculto {
 		display: inline-block;
 		font-size: 0;
@@ -248,6 +260,7 @@
 		margin-top: 30px;
 		padding: 0;
 	}
+	
 	#portal-siteactions {
 		font-size: 1.2em;
 		float: left;
@@ -255,7 +268,7 @@
 		padding-top: 5px;
 		padding-bottom: 5px;
 		margin-left: auto;
-		width: 318px;
+		width: 368px;
 		border-bottom: 1px dotted #9ed5ab;
 		color: #9ed5ab;
 	}
@@ -285,7 +298,7 @@
 	}
 	#accessibility a {
 		color: #dcffe3;
-		font-size: 1.2em;
+		font-size: 1em;
 		padding-right: 10px;
 		font-family: Arial, Helvetica, sans-serif;
 	}
@@ -294,6 +307,14 @@
 		color: #dcffe3;
 		padding: 0 4px;
 	}
+	
+	#portal-siteactions span
+	{
+		background: #9ed5ab;
+		color: #dcffe3;
+		padding: 0 4px;
+	}
+	
 	#accessibility a:hover {
 		border-bottom: 1px solid;
 	}
@@ -302,7 +323,7 @@
 		padding-top: 5px;
 		padding-bottom: 5px;
 		margin-right: 0;
-		width: 318px;
+		width: auto;
 		color: #9ed5ab;
 	}
 	#portal-siteactions li {
@@ -344,27 +365,27 @@
 		text-transform: uppercase;
 		font-weight: 800;
 	}
-	#sobre {
+	#menu {
 		clear: both;
 		background: #0a5517;
 		padding: 5px 0;
 		padding-left: 0;
 		text-align: right;
 	}
-	#sobre ul {
+	#menu ul {
 		position: relative;
 		margin: 0;
 		margin-left: auto;
-		width: 370px;
+		width: 400px;
 		margin-left: auto;
 	}
-	#sobre li {
+	#menu li {
 		display: inline;
 	}
-	#sobre a {
+	#menu a {
 		color: #fff;
 	}
-	#sobre .portalservicos-item a {
+	#menu .portalservicos-item a {
 		margin-top: 50%;
 		padding: 0 10px;
 		border-right: 1px solid #fff;
@@ -470,10 +491,15 @@
 	color: #ffffff !important;
 }
 
-.contraste #sobre {
+.contraste #portal-siteactions span {
+	background: #333 !important;
+	color: #ffffff !important;
+}
+
+.contraste #menu {
 	background: #333 !important;
 }
 
-.contraste #sobre ul {
+.contraste #menu ul {
 	background: #333 !important;
 }
