--- a/src/main/webapp/inicial_arquivos/css/avaliar.css
+++ b/src/main/webapp/inicial_arquivos/css/avaliar.css
@@ -5,8 +5,14 @@
 	
 }
 
+p
+{
+	font-family: Arial, Helvetica, sans-serif !important;
+font-size: 	1.4em;
+}
 .content
 {
+	
 	font-weight: normal !important;
 }
 
@@ -72,7 +78,7 @@ div .outstanding-header h2
 }
  .outstanding-title {
     color: #2C67CD;
-    font-size: 1.7em; 
+    font-size: 18px; 
     font-weight: normal ;
     font-family: Arial, Helvetica, sans-serif;
     padding: 7px 0;
