--- a/src/main/webapp/inicial_arquivos/css/default.css
+++ b/src/main/webapp/inicial_arquivos/css/default.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width : 768px) {
 	body {
 		margin: 0;
-		background-color: #fff;
+		background-color: #ffffff;
 		color: #000000;
 		font-size: 61%;
 		font-weight: normal;
@@ -25,8 +25,7 @@
 		background-color: #0A5517;
 		background-image: -moz-radial-gradient(center, ellipse cover, #19882c 1%, #025310 100%);
 		/* FF3.6+ */
-		background-image: -webkit-gradient(radial, center center, 0px, center center, 100%,
-			color-stop(1%, #19882c), color-stop(100%, #025310));
+		background-image: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%, #19882c), color-stop(100%, #025310));
 		/* Chrome,Safari4+ */
 		background-image: -webkit-radial-gradient(center, ellipse cover, #19882c 1%, #025310 100%);
 		/* Chrome10+,Safari5.1+ */
@@ -36,8 +35,7 @@
 		/* IE10+ */
 		background-image: radial-gradient(ellipse at center, #19882c 1%, #025310 100%);
 		/* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19882c',
-			endColorstr='#025310', GradientType=1);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19882c',endColorstr='#025310', GradientType=1);
 		/* IE6-9 fallback on horizontal gradient */
 	}
 	a {
@@ -125,7 +123,7 @@
 		padding-left: 12%;
 	}
 	#logo a {
-		color: #fff;
+		color: #ffffff;
 		display: block;
 		width: 100%;
 	}
@@ -158,9 +156,9 @@
 	#menu a {
 		
 		padding: 0 10px;
-		border-right: 1px solid #fff;
+		border-right: 1px solid #ffffff;
 		font-size: 1.3em;
-		color: #fff;
+		color: #ffffff;
 	}
 	#voltar-topo {
 		text-align: right;
@@ -172,7 +170,7 @@
 	#main {
 		max-width: 960px;
 		margin: 0 auto;
-		background: #fff;
+		background: #ffffff;
 	}
 	#label_contato {
 		width: 10%;
@@ -321,13 +319,6 @@
 		padding: 0 4px;
 	}
 	
-	label span {
-		background: #327241;
-		color: #dcffe3;
-		font-weight:bold;
-		padding: 0 4px;
-	}
-	
 	#accessibility a:hover {
 		border-bottom: 1px solid;
 	}
@@ -399,7 +390,7 @@
 	#menu .portalservicos-item a {
 		margin-top: 50%;
 		padding: 0 10px;
-		border-right: 1px solid #fff;
+		border-right: 1px solid #ffffff;
 		font-size: 12px;
 	}
 	#voltar-topo {
@@ -412,7 +403,7 @@
 	#main {
 		max-width: 960px;
 		margin: 0 auto;
-		background: #fff;
+		background: #ffffff;
 		clear: both;
 		min-height: 100%;
 	}
