--- a/src/main/webapp/inicial_arquivos/css/barra_brasil.css
+++ b/src/main/webapp/inicial_arquivos/css/barra_brasil.css
@@ -17,7 +17,7 @@
 	float: left; 
 	padding-right: 10px; 
 	margin-right: 10px; 
-	border-right: 1px solid #EDEDED";
+	border-right: 1px solid #EDEDED;
 	
 }
 
