Alterações nas tabelas e nas dimensoes das colunas em Criterios de Sucesso.

--- a/src/main/webapp/inicial_arquivos/css/criterioSucesso.css
+++ b/src/main/webapp/inicial_arquivos/css/criterioSucesso.css
@@ -74,16 +74,16 @@
     font-weight: normal;    
 }
 .indice0{
-	width:1em;
+	width:34%;
 	 
 }
 
 .indice1{
-	width:3em;
+	width:6%;
 		
 }
 
 .indice2{
-	width:6em;
+	width:60%;
 		
 }
