--- a/src/main/webapp/inicial_arquivos/css/default.css
+++ b/src/main/webapp/inicial_arquivos/css/default.css
@@ -7,6 +7,42 @@
 		font-weight: normal;
 		font-family: "Open Sans", Arial, Helvetica, sans-serif;
 	}
+	
+	.imgLoading
+	{
+	padding-top:30px;
+	height:105px;
+	font-size:14px;	
+	background-image: url("/ases/inicial_arquivos/imagens/loading.gif");
+	text-align: center;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	}
+		
+	.oculto
+	{
+	display: none;
+	}
+	
+	#formulario
+	{
+	width: 65%;
+	float: left;
+	}
+	
+	#imagemLoadingHtml
+	{
+	width: 35%;
+	float: left;
+	padding-top:30px;
+	height:105px;
+	font-size:14px;	
+	background-image: url("/ases/inicial_arquivos/imagens/loading.gif");
+	text-align: center;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	}
+		
 	#formaavaliacao {
 		color: #2C67CD !important;
 		font-size: 1.6em;
@@ -16,6 +52,7 @@
 		margin-top: 0;
 		padding: 0;
 	}
+	
 	header {
 		width: 100%;
 		/*Banner*/
@@ -42,7 +79,7 @@
 		text-decoration: none;
 	}
 	#barra-brasil {
-		/*position: fixed;*/
+		
 		position: absolute;
 		width: 100%;
 		top: 0;
@@ -63,7 +100,7 @@
 		padding-left: 0;
 	}
 	#accessibility a {
-		color: #dcffe3;
+		color: #ffffff;
 		font-size: 1.2em;
 		padding-right: 10px;
 		font-family: Arial, Helvetica, sans-serif;
@@ -84,7 +121,7 @@
 	
 	label span {
 		background: #327241;
-		color: #dcffe3;
+		color: #ffffff;
 		font-weight:bold;
 		padding: 0 4px;
 	}
@@ -107,7 +144,7 @@
 		font-size: 1.2em;
 	}
 	#portal-siteactions a {
-		color: #9ed5ab;
+		color: #ffffff;
 	}
 	#portal-siteactions a:hover {
 		border-bottom: 1px solid;
@@ -116,7 +153,7 @@
 		padding-right: 0;
 	}
 	#logo {
-		color: #fff !important;
+		color: #ffffff !important;
 		padding: 0;
 		float: left;
 		width: 35%;
@@ -198,14 +235,14 @@
     color: #9F6000;
     background-color: #FEEFB3;
     background-image: url('/ases/inicial_arquivos/imagens/warning.png');
-}
-.info, .success, .warning, .error, .validation {
+	}
+	.info, .success, .warning, .error, .validation {
     border: 1px solid;
     margin: 10px 0px;
     padding: 15px 10px 15px 50px;
     background-repeat: no-repeat;
     background-position: 10px center;
-}
+	}
 
 
 } /*-----Fim max-width: 1024px */
@@ -214,12 +251,68 @@
 @media only screen and (max-width : 768px) {
 	body {
 		margin: 0;
-		background-color: #fff;
+		background-color: #ffffff;
 		color: #000000;
 		font-size: 61%;
 		font-weight: normal;
 		font-family: "Open Sans", Arial, Helvetica, sans-serif;
 	}
+	
+	
+	
+		.imgLoading
+	{
+	padding-top:30px;
+	height:105px;
+	font-size:14px;	
+	background-image: url("/ases/inicial_arquivos/imagens/loading.gif");
+	text-align: center;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	}
+	
+	.oculto
+	{
+	display: none;
+	}
+	
+	
+	img :focus
+	{	
+	border:1px solid #0080ff;
+	}
+	#formulario
+	{
+	width: 65%;
+	float: left;
+	}
+	
+	#imagemLoadingHtml
+	{
+	width: 35%;
+	float: left;
+	padding-top:5px;
+	height:105px;
+	font-size:12px;	
+	background-image: url("/ases/inicial_arquivos/imagens/loading.gif");
+	text-align: center;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	}
+	
+	.contraste #imagemLoadingHtml
+	{
+	width: 35%;
+	float: left;
+	padding-top:5px;
+	height:105px;
+	font-size:12px;	
+	background-image: url("/ases/inicial_arquivos/imagens/loading_altoContraste.gif");
+	text-align: center;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	}
+	
 	header ul li {
 		display: block;
 		margin-top: 0;
@@ -299,21 +392,21 @@
 		display: inline;
 	}
 	#accessibility a {
-		color: #dcffe3;
+		color: #ffffff;
 		font-size: 1em;
 		padding-right: 10px;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 	#accessibility span {
 		background: #9ed5ab;
-		color: #dcffe3;
+		color: #ffffff;
 		padding: 0 4px;
 	}
 	
 	#portal-siteactions span
 	{
 		background: #9ed5ab;
-		color: #dcffe3;
+		color: #ffffff;
 		padding: 0 4px;
 	}
 	
@@ -326,13 +419,13 @@
 		padding-bottom: 5px;
 		margin-right: 0;
 		width: auto;
-		color: #9ed5ab;
+		color: #ffffff;
 	}
 	#portal-siteactions li {
 		padding-right: 10px;
 	}
 	#portal-siteactions a {
-		color: #9ed5ab;
+		color: #ffffff;
 	}
 	#portal-siteactions a:hover {
 		border-bottom: 1px solid;
@@ -341,13 +434,13 @@
 		padding-right: 0;
 	}
 	#logo {
-		color: #fff !important;
+		color: #ffffff !important;
 		padding: 0;
 		width: 35%;
 		padding-left: 3%;		
 	}
 	#logo a {
-		color: #fff;
+		color: #ffffff;
 		display: block;
 		width: 100%;
 	}
