--- a/src/main/webapp/inicial_arquivos/css/default.css
+++ b/src/main/webapp/inicial_arquivos/css/default.css
@@ -72,8 +72,8 @@
 		/* IE10+ */
 		background-image: radial-gradient(ellipse at center, #19882c 1%, #025310 100%);
 		/* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#19882c',endColorstr='#025310', GradientType=1);
-		/* IE6-9 fallback on horizontal gradient */
+		/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#19882c',endColorstr='#025310', GradientType=1);
+		IE6-9 fallback on horizontal gradient */
 	}
 	a {
 		text-decoration: none;
@@ -218,7 +218,7 @@
 		float: left;
 	}
 
-	/*-----------Footer-----------*/
+
 	#footer-brasil {
 		background: none repeat scroll 0% 0% #00420c;
 		padding: 1em 0px;
@@ -337,8 +337,8 @@
 		/* IE10+ */
 		background-image: radial-gradient(ellipse at center, #19882c 1%, #025310 100%);
 		/* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#19882c',endColorstr='#025310', GradientType=1);
-		/* IE6-9 fallback on horizontal gradient */
+		/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#19882c',endColorstr='#025310', GradientType=1);
+		 IE6-9 fallback on horizontal gradient */
 	}
 	a {
 		text-decoration: none;
@@ -518,7 +518,7 @@
     background-repeat: no-repeat;
     background-position: 10px center;
 }
-	/*-----------Footer-----------*/
+	
 	#footer-brasil {
 		background: none repeat scroll 0% 0% #00420c;
 		padding: 1em 0px;
