--- a/src/main/webapp/inicial_arquivos/css/avaliar.css
+++ b/src/main/webapp/inicial_arquivos/css/avaliar.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width : 768px) {
 	
 	.hr_linhaDupla {
-		border-botton: 4px solid #000000;
+		border-bottom: 4px solid #000000;
 		border-top: 1px solid #c0c0c0;
 	}
 	p {
