correção de css.

--- a/src/main/webapp/inicial_arquivos/css/contato.css
+++ b/src/main/webapp/inicial_arquivos/css/contato.css
@@ -15,7 +15,7 @@
 	text-align: left;
 	width: 3.5em;
 	padding-right: 1.7em;
-	padding-botton: 1px;
+	padding-bottom: 1px;
 }
 
 .formContato input{
